--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
+  <div class="wrapper"><div style='text-align: center; padding: 5px; font-weight: bold;'>DEVELOPER <a href='aymanali99.xyz' style="color: #FFFF; text-decoration: none;">AYMAN ALI</a></div>
   <meta charset="UTF-8">
   <title>CodePen - JS Planet defense game</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
@@ -10,8 +11,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <body>
-    <canvas id="canvas"></canvas>
-    <a href="https://codepen.io/Loopez10/full/dMaVdQ" class="full-screen" target="_blank"></a>
+
 </body>
 <!-- partial -->
   <script  src="./script.js"></script>
