--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-  <div class="wrapper"><div style='text-align: center; padding: 5px; font-weight: bold;'>DEVELOPER <a href='aymanali99.xyz' style="color: #FFFF; text-decoration: none;">AYMAN ALI</a></div>
+  <div class="wrapper"><div style='text-align: center; padding: 5px; font-weight: bold;'>DEVELOPER <a href='aymanali99.xyz' style="color: #FFFFFF; text-decoration: none;">AYMAN ALI</a></div>
   <meta charset="UTF-8">
   <title>CodePen - JS Planet defense game</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
