--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <div class="wrapper"><div style='text-align: center; padding: 5px; font-weight: bold;'>DEVELOPER <a href='aymanali99.xyz' style="color: #FFFFFF; text-decoration: none;">AYMAN ALI</a></div>
   <meta charset="UTF-8">
-  <title>CodePen - JS Planet defense game</title>
+  <title>CodePen - DEVELOPER AYMAN</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel="stylesheet" href="./style.css">
 
@@ -11,8 +11,9 @@
 <body>
 <!-- partial:index.partial.html -->
 <body>
-
-</body>
+   <canvas id="canvas"></canvas>
+    <a href="https://codepen.io/Loopez10/full/dMaVdQ" class="full-screen" target="_blank"></a>
+  </body>
 <!-- partial -->
   <script  src="./script.js"></script>
 
