--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-  <div class="wrapper"><div style='text-align: center; padding: 10px; font-weight: bold;'> GAME DEVELOPED <a href='aymanali99.xyz' style="color: #FFFFFF; text-decoration: none;">BY AYMAN ALI</a></div>
+  <div class="wrapper"><div style='text-align: center; padding: 10px; font-weight: bold;'>  style="color: #FFFFFF GAME DEVELOPED  style="color: #FFFFFF; text-decoration: none;">BY AYMAN ALI FOR ZAID WEBSITE</a></div>
   <meta charset="UTF-8">
   <title>- DEVELOPER AYMAN</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
