--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-  <div class="wrapper"><div style='text-align: center; padding: 10px; font-weight: bold;'> .style="color: #FFFFFF; text-decoration: none;"> DEVELOPED BY AYMAN ALI FOR ZAID</a></div>
+  <div class="wrapper"><div style='text-align: center; padding: 5px; font-weight: bold;'>.<a href='aymanali99.xyz' style="color: #FFF; text-decoration: none;">DEV BY AYMAN FOR ZAID</a>
   <meta charset="UTF-8">
   <title>DEVELOPER AYMAN</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
